force-app/main/default/objects/Volunteer_Attendance__c/Volunteer_Attendance__c.object-meta.xml
<CustomObject>
    <description>Used for tracking volunteer attendance on programs. Linked to campaign member for communication, campaign for program, contact for volunteer</description>
    <label>Volunteer Attendance</label>
    <nameField>
        <displayFormat>VA{00000}</displayFormat>
        <label>Volunteer Attendance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>