force-app/main/default/objects/Volunteer_Attendance__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>