force-app/main/default/objects/Volunteer_Attendance__c/fields/Covid_19_Vaccination_Date__c.field-meta.xml
<CustomField>
    <fullName>Covid_19_Vaccination_Date__c</fullName>
    <formula>Volunteer__r.Covid_19_Vaccination_Date__c</formula>
    <label>Covid-19 Vaccination Date</label>
    <type>Date</type>
</CustomField>