force-app/main/default/objects/Volunteer_Attendance__c/fields/Default_Vol_Hours__c.field-meta.xml
<CustomField>
    <fullName>Default_Vol_Hours__c</fullName>
    <formula>Event__r.Event_Duration__c + CASE( Participation_Role__c ,&quot;CAMP LEADER&quot;, 10, 
&quot;COMMITTEE&quot;, 10, 
&quot;COMPANION&quot;,1.5,
&quot;PHOTOGRAPHER&quot;,1,
&quot;DOCTOR&quot;, 4,
&quot;REGISTERED NURSE&quot;,4,
1)</formula>
    <label>Default Vol Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>