force-app/main/default/objects/Volunteer_Attendance__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Volunteer Attendances</relationshipLabel>
    <relationshipName>Volunteer_Attendances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>