force-app/main/default/objects/Volunteer_Attendance__c/fields/EventStartDate__c.field-meta.xml
<CustomField>
    <fullName>EventStartDate__c</fullName>
    <formula>Event__r.StartDate</formula>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>