force-app/main/default/objects/Volunteer_Attendance__c/fields/IsCompanion__c.field-meta.xml
<CustomField>
    <fullName>IsCompanion__c</fullName>
    <formula>if( TEXT( Participation_Role__c ) = &quot;Companion&quot;,true,false)</formula>
    <label>IsCompanion</label>
    <type>Checkbox</type>
</CustomField>