force-app/main/default/objects/Volunteer_Attendance__c/fields/Office_Volunteering_Day__c.field-meta.xml
<CustomField>
    <fullName>Office_Volunteering_Day__c</fullName>
    <inlineHelpText>This field is used for reporting on volunteering in the office to track the days complete.</inlineHelpText>
    <label>Office Volunteering Day</label>
    <type>Date</type>
</CustomField>