force-app/main/default/objects/Volunteer_Attendance__c/fields/Participation_Role__c.field-meta.xml
<CustomField>
    <fullName>Participation_Role__c</fullName>
    <label>Participation Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activity Provider</fullName>
            </value>
            <value>
                <fullName>Camp Leader</fullName>
            </value>
            <value>
                <fullName>Chaperone</fullName>
            </value>
            <value>
                <fullName>Co-Driver</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Companion</fullName>
            </value>
            <value>
                <fullName>Companion Support</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Corporate Volunteer</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Endorsed Enrolled Nurse</fullName>
            </value>
            <value>
                <fullName>Entrant</fullName>
            </value>
            <value>
                <fullName>Event Official</fullName>
            </value>
            <value>
                <fullName>Events/Fundraising</fullName>
            </value>
            <value>
                <fullName>First Aider</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Leadership Committee Member</fullName>
            </value>
            <value>
                <fullName>Official</fullName>
            </value>
            <value>
                <fullName>Paramedic</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Photographer</fullName>
            </value>
            <value>
                <fullName>Puppets - Puppeteer</fullName>
            </value>
            <value>
                <fullName>Registered Nurse</fullName>
            </value>
            <value>
                <fullName>Restaurant/Caterer</fullName>
            </value>
            <value>
                <fullName>Rover</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Support Crew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>