force-app/main/default/objects/Volunteer_Attendance__c/fields/Registration_Period__c.field-meta.xml
<CustomField>
    <fullName>Registration_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Period</label>
    <referenceTo>Registration_Period__c</referenceTo>
    <relationshipLabel>Volunteer Attendances</relationshipLabel>
    <relationshipName>Volunteer_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>