force-app/main/default/objects/Volunteer_Attendance__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Event__c</field>
            <operation>equals</operation>
            <valueField>Registration_Type__c.Event__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Registration_Type__c</referenceTo>
    <relationshipLabel>Volunteer Attendances</relationshipLabel>
    <relationshipName>Volunteer_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>