force-app/main/default/objects/Volunteer_Attendance__c/fields/Transport_Pick_Up_Location__c.field-meta.xml
<CustomField>
    <fullName>Transport_Pick_Up_Location__c</fullName>
    <label>Transport-Getting to Camp-Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transport_Locations</valueSetName>
    </valueSet>
</CustomField>