force-app/main/default/objects/Volunteer_Attendance__c/fields/Volunteer_Eligable__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Eligable__c</fullName>
    <formula>Volunteer__r.Volunteer_Eligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Eligible</label>
    <type>Text</type>
</CustomField>