force-app/main/default/objects/Volunteer_Attendance__c/fields/Volunteer_Hours_Override__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Override__c</fullName>
    <label>Volunteer Hours Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>