force-app/main/default/objects/Volunteer_Attendance__c/fields/Volunteer_Hours_Total__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Total__c</fullName>
    <formula>if(( Volunteer_Hours_Override__c )= 0,  Default_Vol_Hours__c , Volunteer_Hours_Override__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Hours Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>