force-app/main/default/objects/Volunteer_Attendance__c/fields/Volunteer_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name__c</fullName>
    <formula>Volunteer__r.Preferred_First_Name__c + &quot; &quot; + Volunteer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Name</label>
    <type>Text</type>
</CustomField>