force-app/main/default/objects/Volunteer_Attendance__c/fields/Volunteer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Rating__c</fullName>
    <label>Volunteer Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standout Volunteer</fullName>
            </value>
            <value>
                <fullName>Good Fit</fullName>
            </value>
            <value>
                <fullName>Still Settling In</fullName>
            </value>
            <value>
                <fullName>Needs Further Support/Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>