force-app/main/default/objects/Volunteer_Attendance__c/fields/Volunteer_WWC_Expiring__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_WWC_Expiring__c</fullName>
    <formula>Volunteer__r.Volunteer_WWC_Expiry_Date__c  &lt;=  Event__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer WWC Expiring</label>
    <type>Checkbox</type>
</CustomField>