force-app/main/default/objects/Volunteer_Attendance__c/validationRules/VA_Cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>VA_Cancellation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  TEXT(Attendance__c) = &apos;Cancelled&apos;,  isblank(Cancellation_Reason__c))</errorConditionFormula>
    <errorMessage>Cancellation reason must be given when cancelling.</errorMessage>
</ValidationRule>