force-app/main/default/objects/Volunteer_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <filters>
        <field>Participation_Role__c</field>
        <operation>equals</operation>
        <value>Staff</value>
    </filters>
    <label>All</label>
</ListView>