force-app/main/default/objects/Volunteer_Attendance__c/listViews/Event_Volunteer_Attendance_SYD.listView-meta.xml
<ListView>
    <fullName>Event_Volunteer_Attendance_SYD</fullName>
    <columns>Event__c</columns>
    <columns>NAME</columns>
    <columns>Volunteer__c</columns>
    <columns>Volunteer_Eligable__c</columns>
    <columns>Participation_Role__c</columns>
    <columns>Attendance__c</columns>
    <columns>Transport_Pick_Up_Location__c</columns>
    <columns>Transport_Pick_Up_Time__c</columns>
    <columns>Transport_Drop_Off_Location__c</columns>
    <columns>Transport_Drop_Off_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Accepted,Attended</value>
    </filters>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>SYD2309 Middle</value>
    </filters>
    <label>Event Volunteer Attendance SYD</label>
</ListView>