force-app/main/default/objects/Volunteer_Attendance__c/listViews/Volunteer_Attendance_VIC1.listView-meta.xml
<ListView>
    <fullName>Volunteer_Attendance_VIC1</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Volunteer__c</columns>
    <columns>Covid_19_Vaccination_Date__c</columns>
    <columns>Participation_Role__c</columns>
    <columns>IsCompanion__c</columns>
    <columns>Transport_Pick_Up_Location__c</columns>
    <columns>Transport_Pick_Up_Time__c</columns>
    <columns>Transport_Drop_Off_Location__c</columns>
    <columns>Transport_Drop_Off_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Accepted,Attended</value>
    </filters>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>tas2302 combo camp</value>
    </filters>
    <label>Volunteer Attendance VIC</label>
</ListView>