force-app/main/default/objects/Volunteer_Attendance__c/listViews/Volunteer_Attendance_WA.listView-meta.xml
<ListView>
    <fullName>Volunteer_Attendance_WA</fullName>
    <columns>Event__c</columns>
    <columns>NAME</columns>
    <columns>Volunteer__c</columns>
    <columns>Participation_Role__c</columns>
    <columns>Transport_Pick_Up_Location__c</columns>
    <columns>Transport_Pick_Up_Time__c</columns>
    <columns>Transport_Drop_Off_Location__c</columns>
    <columns>Transport_Drop_Off_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>WA2110 Combo Camp</value>
    </filters>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Accepted,Attended</value>
    </filters>
    <label>Volunteer Attendance WA</label>
</ListView>