force-app/main/default/objects/Volunteer_Attendance__c/listViews/Volunteer_Attendances_ACT.listView-meta.xml
<ListView>
    <fullName>Volunteer_Attendances_ACT</fullName>
    <columns>Event__c</columns>
    <columns>NAME</columns>
    <columns>Attendance__c</columns>
    <columns>Volunteer__c</columns>
    <columns>Participation_Role__c</columns>
    <columns>Transport_Pick_Up_Location__c</columns>
    <columns>Transport_Pick_Up_Time__c</columns>
    <columns>Transport_Drop_Off_Location__c</columns>
    <columns>Transport_Drop_Off_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>SNSW1804 Middle Camp</value>
    </filters>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Request to Attend,Accepted</value>
    </filters>
    <label>Volunteer Attendances ACT</label>
    <sharedTo></sharedTo>
</ListView>