force-app/main/default/objects/Volunteer_Attendance__c/listViews/Volunteers_At_Event.listView-meta.xml
<ListView>
    <fullName>Volunteers_At_Event</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Volunteer__c</columns>
    <columns>Participation_Role__c</columns>
    <columns>IsCompanion__c</columns>
    <columns>Transport_Pick_Up_Location__c</columns>
    <columns>Transport_Pick_Up_Time__c</columns>
    <columns>Transport_Drop_Off_Location__c</columns>
    <columns>Transport_Drop_Off_Time__c</columns>
    <columns>Attendance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attendance__c</field>
        <operation>equals</operation>
        <value>Request to Attend,Accepted</value>
    </filters>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>QLD2309 Combo</value>
    </filters>
    <label>Volunteer Attendance QLD</label>
</ListView>